--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,6 @@
 
   <body>
     <span id="chartArea"></span>
-    <script src="static/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
