--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,15 @@
   </head>
 
   <body>
+    <span style="position:fixed;right:1em;top:1em;">
+      <a href="/">
+	<button type="button" class="btn btn-outline-dark btn-sm">
+	  New game
+	</button>
+      </a>
+    </span>
     <span id="chartArea"></span>
     <script src="app.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   </body>
 </html>
